fix: fix issue with content collapsing horizontally on iPad

--- a/assets/styles/base/_general.scss
+++ b/assets/styles/base/_general.scss
@@ -21,6 +21,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   position: relative;
+  width: 100%;
   color: var(--blue-color);
   background-color: var(--page-bg-color);
   font-family: var(--base-font-family);
